Bug 932500 - PathD2D::TransformedCopyToBuilder ignores even odd fill. r=Bas